--- a/src/main/resources/default-test-magnolia.properties
+++ b/src/main/resources/default-test-magnolia.properties
@@ -10,3 +10,5 @@ magnolia.password.manager.key.location=${magnolia.home}/password-manager-key
 magnolia.upload.tmpdir=${magnolia.home}/upload-tmp-dir
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
 
+jaas.config=classpath:/config/current-jaas.config
+
