--- a/src/main/resources/default-test-magnolia.properties
+++ b/src/main/resources/default-test-magnolia.properties
@@ -9,6 +9,8 @@ magnolia.clusterid=test-01
 magnolia.password.manager.key.location=${magnolia.home}/password-manager-key
 magnolia.upload.tmpdir=${magnolia.home}/upload-tmp-dir
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
+magnolia.cache.startdir=cacheDir
+magnolia.author.key.location=authorKey
 
 jaas.config=classpath:/config/current-jaas.config
 
