adjust cache/authorkey properties to don't spam local dev folder

--- a/src/main/resources/default-test-magnolia.properties
+++ b/src/main/resources/default-test-magnolia.properties
@@ -9,8 +9,8 @@ magnolia.clusterid=test-01
 magnolia.password.manager.key.location=${magnolia.home}/password-manager-key
 magnolia.upload.tmpdir=${magnolia.home}/upload-tmp-dir
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
-magnolia.cache.startdir=cacheDir
-magnolia.author.key.location=authorKey
+magnolia.cache.startdir=${magnolia.home}/cacheDir
+magnolia.author.key.location=${magnolia.home}/authorKey
 
 jaas.config=classpath:/config/current-jaas.config
 
