Copy magnolia-license-2.0.0.jar to project, since it's dependency is not accessible via magnolia nexus

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,6 @@
   <properties>
     <!--	mvn versions:display-property-updates	-->
     <magnolia.version>6.3.1</magnolia.version>
-    <magnolia.license.version>2.0.0</magnolia.license.version>
     <jsr305.nullable.version>3.0.2</jsr305.nullable.version>
     <!--Test dependency versions-->
     <junit.version>5.11.1</junit.version>
@@ -69,7 +68,9 @@
       <dependency>
         <groupId>info.magnolia</groupId>
         <artifactId>magnolia-license</artifactId>
-        <version>${magnolia.license.version}</version>
+        <version>2.0.0</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/lib/magnolia-license-2.0.0.jar</systemPath>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
