Revert back to referencing dependency (maven central - Dependencies can not require a system scope)

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -25,5 +25,7 @@ jobs:
               "username": "${{secrets.MGNL_NEXUS_USER}}",
               "password": "${{secrets.MGNL_NEXUS_PASS}}"
             }]
+      - name: Test
+        run: mvn dependency:get -Dartifact=info.magnolia:magnolia-license:2.0.0
       - name: Maven verify
         run: mvn verify --batch-mode
