--- a/.github/workflows/release-and-deploy-release.yml
+++ b/.github/workflows/release-and-deploy-release.yml
@@ -54,6 +54,17 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'main'
+      - name: Maven setup
+        uses: s4u/maven-settings-action@v3.0.0
+        with:
+          servers: |
+            [{
+              "id": "magnolia.enterprise.group",
+              "username": "${{secrets.MGNL_NEXUS_USER}}",
+              "password": "${{secrets.MGNL_NEXUS_PASS}}"
+            }]
+      - name: Test
+        run: mvn dependency:get -Dartifact=info.magnolia:magnolia-license:2.0.0
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -64,10 +75,8 @@ jobs:
           server-password: MAVEN_PASSWORD
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-      - name: Test
-        run: mvn dependency:get -Dartifact=info.magnolia:magnolia-license:2.0.0
       - name: Release Maven package
-        run: mvn deploy -Pdeploy -U
+        run: mvn deploy -Pdeploy
         env:
           MAVEN_USERNAME: ${{ secrets.SONATYPE_USER }}
           MAVEN_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
