--- a/src/main/resources/default-test-magnolia.properties
+++ b/src/main/resources/default-test-magnolia.properties
@@ -13,4 +13,4 @@ magnolia.cache.startdir=${magnolia.home}/cacheDir
 magnolia.author.key.location=${magnolia.home}/authorKey
 
 jaas.config=classpath:/config/current-jaas.config
-
+log4j.configuration=${resource.home}/log4j2-test.xml
