--- a/pom.xml
+++ b/pom.xml
@@ -37,27 +37,36 @@
 
   <properties>
     <!--	mvn versions:display-property-updates	-->
-    <magnolia.version>6.3.4</magnolia.version>
-    <magnolia.license.version>2.0.0</magnolia.license.version>
-    <jsr305.nullable.version>3.0.2</jsr305.nullable.version>
-    <junit.version>5.11.4</junit.version>
-    <mockito.version>5.15.2</mockito.version>
-    <slf4j.bridge.version>2.0.16</slf4j.bridge.version>
+    <magnolia.version>6.3.14</magnolia.version>
+    <magnolia.license.version>2.0.1</magnolia.license.version>
+    <junit.version>5.13.4</junit.version>
+    <junit.engine.version>5.13.1</junit.engine.version>
+    <junit.platform.version>1.13.1</junit.platform.version>
+    <mockito.version>5.19.0</mockito.version>
+    <slf4j.bridge.version>2.0.17</slf4j.bridge.version>
 
     <!-- Maven Plugins -->
-    <mvn.compiler.plugin.version>3.13.0</mvn.compiler.plugin.version>
-    <mvn.source.plugin.version>3.3.0</mvn.source.plugin.version>
-    <mvn.javadoc.version>3.11.2</mvn.javadoc.version>
+    <mvn.compiler.plugin.version>3.14.0</mvn.compiler.plugin.version>
+    <mvn.source.plugin.version>3.3.1</mvn.source.plugin.version>
+    <mvn.javadoc.version>3.11.3</mvn.javadoc.version>
     <mvn.gpg.plugin.version>3.2.5</mvn.gpg.plugin.version>
     <mvn.sonatype.publishing.plugin.version>0.5.0</mvn.sonatype.publishing.plugin.version>
-    <mvn.surefire.plugin.version>3.5.2</mvn.surefire.plugin.version>
+    <mvn.surefire.plugin.version>3.5.3</mvn.surefire.plugin.version>
 
     <javaVersion>17</javaVersion>
+    <maven.version.ignore>.*-M.*,.*-alpha.*,.*-beta.*,.*-rc.*,.*-RC.*</maven.version.ignore>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <!-- Magnolia -->
       <dependency>
         <groupId>info.magnolia.bundle</groupId>
@@ -65,16 +74,6 @@
         <version>${magnolia.version}</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>jsr305</artifactId>
-        <version>${jsr305.nullable.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -114,12 +113,16 @@
       <artifactId>magnolia-templating</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -128,6 +131,14 @@
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-engine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-commons</artifactId>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -141,8 +152,8 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
