simplify and document cluster repo setup

--- a/src/main/resources/default-test-magnolia.properties
+++ b/src/main/resources/default-test-magnolia.properties
@@ -4,6 +4,8 @@ magnolia.resources.dir=${magnolia.home}/modules
 magnolia.repositories.home=${magnolia.home}/repositories
 magnolia.repositories.config=classpath:/repository/repositories.xml
 magnolia.repositories.jackrabbit.config=classpath:/repository/InMemoryJcrRepositoryConfiguration.xml
+magnolia.repositories.jackrabbit.cluster.config=classpath:/repository/InMemoryJcrRepositoryConfiguration.xml
+magnolia.repositories.jackrabbit.cluster.master=true
 magnolia.clusterid=test-01
 
 magnolia.password.manager.key.location=${magnolia.home}/password-manager-key
